<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/ic_name"
            app:endIconMode="clear_text"
            android:hint="@string/name_text"
            android:layout_marginBottom="16dp">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description_text"
            android:layout_gravity="center_vertical"
            android:textSize="16sp"/>
        <EditText
            android:id="@+id/descriptionField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="4"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:padding="8dp"
            android:hint="@string/type_here_text"
            android:layout_marginBottom="16dp"
            android:overScrollMode="always"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/ic_username"
            app:endIconMode="clear_text"
            android:hint="@string/username_text"
            android:layout_marginBottom="16dp">
            <com.google.android.material.textfield.TextInputEditText

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/ic_password"
            app:endIconMode="password_toggle"
            android:hint="@string/password_text"
            android:layout_marginBottom="16dp">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copy_to_clipboard_text"
            android:layout_gravity="center_vertical"
            android:textSize="16sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp"
            android:gravity="center">
            <ImageButton
                android:id="@+id/btnUserToClipboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_username"
                style="@style/Widget.AppCompat.Button.Borderless" />
            <ImageButton
                android:id="@+id/btnPwToClipboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_password"
                style="@style/Widget.AppCompat.Button.Borderless" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/extra_info_text"
            android:layout_gravity="center_vertical"
            android:textSize="16sp"/>
        <EditText
            android:id="@+id/extraInfoField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="4"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:padding="8dp"
            android:hint="@string/type_here_text"
            android:overScrollMode="always"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical" />
    </LinearLayout>
</ScrollView>