<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/background_color">

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:src="@drawable/passworthylands"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_information_text"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textStyle="italic"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp"
        app:layout_constraintBottom_toTopOf="@+id/masterPasswordField"
        app:layout_constraintLeft_toLeftOf="@+id/masterPasswordField" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/masterPasswordField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_text"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/white"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:boxStrokeColor="@color/white"
        app:boxBackgroundColor="@android:color/transparent"
        app:errorEnabled="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textColorHint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/white"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_password"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/masterPasswordField"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"/>

</androidx.constraintlayout.widget.ConstraintLayout>